<resources>
    <string name="app_name">Books Inventory</string>
    <string name="book_heading">Book Information</string>
    <string name="book_name_hint">Name</string>
    <string name="book_price_hint">Price</string>
    <string name="book_quantity_hint">Quantity</string>
    <string name="supplier_heading">Supplier Information</string>
    <string name="supplier_name_hint">Name</string>
    <string name="supplier_phone_number_hint">Phone Number</string>
    <string name="save_action">Save</string>
    <string name="delete_action">delete</string>
    <string name="error_saving">Error saving book information</string>
    <string name="info_saved">Book Information Saved</string>

    <!-- Toast message in editor when current book was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_successful">Book deleted</string>

    <!-- Toast message in editor when current book has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_failed">Error with deleting book</string>

    <!-- Dialog message to ask the user to confirm deleting the current book [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this book?</string>

    <!-- Dialog button text for the option to confirm deleting the current book [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current book [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Label for the book's breed if the breed is unknown [CHAR LIMIT=20] -->
    <string name="addBook">Add Book</string>
    <string name="editBook">Edit Book</string>
    <string name="a_new_fresh_start">A new fresh start</string>
    <string name="any_book_to_add">Any book to add?</string>
    <string name="book_sold">Book Sold</string>
    <string name="not_available">Book not available</string>
    <string name="out_stock">Out of stock</string>
    <string name="discard_changes_msg">Discard your changes and quit editing</string>
    <string name="discard_btn">Discard</string>
    <string name="stay_btn">Keep Editing</string>
    <string name="btn_increase">+</string>
    <string name="btn_decrease">-</string>
    <string name="btn_call">Call</string>
    <string name="text_price">Price: $</string>
    <string name="text_quantity">Quantity:</string>
    <string name="btn_sale">SALE</string>
    <string name="menu_dummy_data">Insert Dummy Data</string>
    <string name="menu_delete_all">Delete All Books</string>
    <string name="toast_update_failed">Update book failed</string>
    <string name="toast_update_success">Update book succesful</string>
    <string name="toast_book_name_req">Book name required!</string>
    <string name="toast_book_price_req">Book price required!</string>
    <string name="toast_book_quantity_req">Book quantity required!</string>
    <string name="toast_supplier_name_req">Supplier name required!</string>
    <string name="toast_supplier_phone_req">Supplier phone required!</string>
    <string name="text_tel">tel:</string>
    <string name="toast_delete_all">rows deleted</string>
    <string name="val_dummy_name">The Lord of The Ring</string>
    <string name="val_dummy_price">58</string>
    <string name="val_dummy_quantity">300</string>
    <string name="val_dummy_supplier_name">Wizard Editorial</string>
    <string name="val_dummy_supplier_phone">2542005555</string>
</resources>
